v1.0.0/modules/schema/pages/class/MarketActualEvent.adoc
= `MarketActualEvent`
:toclevels: 4


+++This class represents the actual instance of an event.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketActualEvent`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketActualEvent`*
 *** xref::class/DistributedResourceActualEvent.adoc[`DistributedResourceActualEvent`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MarketActualEvent {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



PlannedMarketEvent {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketRun {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MarketActualEvent -> PlannedMarketEvent: PlannedMarketEvent


MarketActualEvent -> MarketRun: MarketRun


MarketActualEvent -> DiagramObject: DiagramObjects


MarketActualEvent -> InstanceSet: InstanceSet


MarketActualEvent -> Name: Names


MarketActualEvent -> ChangeSetMember: PropertiesCIMDataObject


MarketActualEvent -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<eventComments,`eventComments`>>
| 1
| https://w3id.org/linkml/String[`string`]
| +++Free format comments for the event, for any purpose needed.+++

| <<eventStatus,`eventStatus`>>
| 1
| xref::enumeration/MarketEventStatusKind.adoc[`MarketEventStatusKind`]
| +++Event status, e.g. active, canceled, expired, etc.+++

| <<eventType,`eventType`>>
| 1
| https://w3id.org/linkml/String[`string`]
| +++Actual event type.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<MarketRun,`MarketRun`>>
| 0..1
| xref::class/MarketRun.adoc[`MarketRun`]
| +++Market run triggered by this actual event. For example, the DA market run is triggered by the actual open bid submission event and terminated by the actual execution and completion of the DA market run captured by the runState of the MarketRun.+++

| <<PlannedMarketEvent,`PlannedMarketEvent`>>
| 0..1
| xref::class/PlannedMarketEvent.adoc[`PlannedMarketEvent`]
| +++Planned event executed by this actual event.+++

| <<eventEndTime,`eventEndTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++End time of the event.+++

| <<eventStartTime,`eventStartTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Start time of the event.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#eventComments]
=== `eventComments`
+++Free format comments for the event, for any purpose needed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventComments`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#eventEndTime]
=== `eventEndTime`
+++End time of the event.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventEndTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#eventStartTime]
=== `eventStartTime`
+++Start time of the event.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#eventStatus]
=== `eventStatus`
+++Event status, e.g. active, canceled, expired, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventStatus`
| Cardinality
| 1
| Type
| xref::enumeration/MarketEventStatusKind.adoc[`MarketEventStatusKind`]


|===

//[discrete]
[#eventType]
=== `eventType`
+++Actual event type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventType`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#MarketRun]
=== `MarketRun`
+++Market run triggered by this actual event. For example, the DA market run is triggered by the actual open bid submission event and terminated by the actual execution and completion of the DA market run captured by the runState of the MarketRun.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.MarketRun`
| Cardinality
| 0..1
| Type
| xref::class/MarketRun.adoc[`MarketRun`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PlannedMarketEvent]
=== `PlannedMarketEvent`
+++Planned event executed by this actual event.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.PlannedMarketEvent`
| Cardinality
| 0..1
| Type
| xref::class/PlannedMarketEvent.adoc[`PlannedMarketEvent`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


