v1.1.0/modules/schema/pages/class/MarketActualEvent.adoc
= `MarketActualEvent`
:toclevels: 4


+++This class represents the actual instance of an event.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketActualEvent`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketActualEvent`*
 *** xref::class/DistributedResourceActualEvent.adoc[`DistributedResourceActualEvent`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<MarketRun,`MarketRun`>>
//| [[slots_table.MarketRun]]<<MarketRun,`MarketRun`>>
| 0..1 +
xref::class/MarketRun.adoc[`MarketRun`]
| +++Market run triggered by this actual event. For example, the DA market run is triggered by the actual open bid submission...+++
| _n/a_

| <<PlannedMarketEvent,`PlannedMarketEvent`>>
//| [[slots_table.PlannedMarketEvent]]<<PlannedMarketEvent,`PlannedMarketEvent`>>
| 0..1 +
xref::class/PlannedMarketEvent.adoc[`PlannedMarketEvent`]
| +++Planned event executed by this actual event.+++
| _n/a_

| <<eventComments,`eventComments`>>
//| [[slots_table.eventComments]]<<eventComments,`eventComments`>>
| 1 +
https://w3id.org/linkml/String[`string`]
| +++Free format comments for the event, for any purpose needed.+++
| _n/a_

| <<eventEndTime,`eventEndTime`>>
//| [[slots_table.eventEndTime]]<<eventEndTime,`eventEndTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++End time of the event.+++
| _n/a_

| <<eventStartTime,`eventStartTime`>>
//| [[slots_table.eventStartTime]]<<eventStartTime,`eventStartTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Start time of the event.+++
| _n/a_

| <<eventStatus,`eventStatus`>>
//| [[slots_table.eventStatus]]<<eventStatus,`eventStatus`>>
| 1 +
xref::enumeration/MarketEventStatusKind.adoc[`MarketEventStatusKind`]
| +++Event status, e.g. active, canceled, expired, etc.+++
| _n/a_

| <<eventType,`eventType`>>
//| [[slots_table.eventType]]<<eventType,`eventType`>>
| 1 +
https://w3id.org/linkml/String[`string`]
| +++Actual event type.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#eventComments]
=== `eventComments`
+++Free format comments for the event, for any purpose needed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventComments`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.eventComments,&#10548;>>
--
////


//[discrete]
[#eventEndTime]
=== `eventEndTime`
+++End time of the event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventEndTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.eventEndTime,&#10548;>>
--
////


//[discrete]
[#eventStartTime]
=== `eventStartTime`
+++Start time of the event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.eventStartTime,&#10548;>>
--
////


//[discrete]
[#eventStatus]
=== `eventStatus`
+++Event status, e.g. active, canceled, expired, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventStatus`
| Cardinality
| 1
| Type
| xref::enumeration/MarketEventStatusKind.adoc[`MarketEventStatusKind`]


|===

////
[.text-left]
--
<<slots_table.eventStatus,&#10548;>>
--
////


//[discrete]
[#eventType]
=== `eventType`
+++Actual event type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.eventType`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.eventType,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#MarketRun]
=== `MarketRun`
+++Market run triggered by this actual event. For example, the DA market run is triggered by the actual open bid submission event and terminated by the actual execution and completion of the DA market run captured by the runState of the MarketRun.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.MarketRun`
| Cardinality
| 0..1
| Type
| xref::class/MarketRun.adoc[`MarketRun`]


|===

////
[.text-left]
--
<<slots_table.MarketRun,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PlannedMarketEvent]
=== `PlannedMarketEvent`
+++Planned event executed by this actual event.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketActualEvent.PlannedMarketEvent`
| Cardinality
| 0..1
| Type
| xref::class/PlannedMarketEvent.adoc[`PlannedMarketEvent`]


|===

////
[.text-left]
--
<<slots_table.PlannedMarketEvent,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/MarketRun.adoc[`MarketRun`] | xref::class/MarketRun.adoc#MarketActualEvent[`MarketActualEvent`]



| xref::class/PlannedMarketEvent.adoc[`PlannedMarketEvent`] | xref::class/PlannedMarketEvent.adoc#MarketActualEvent[`MarketActualEvent`]


|===

